fdo#81993: Revert "Resolves: #i119464# Update default alignment ...

... value for docx [Sub]Title"

This reverts commit acc671ec74c874ffd22803bb2ee54a1f2c027155.

The commit is clearly unnecessary:

1) commit 3f9e7e72c53ecbe8ee1ab060f811cb41eadfc7e1
   appears to be a better fix for alignment

2) commit b95d203bc17c83ec0fe5139f519d53ed1d842d3a
   should have disabled the Center default in Writer already

Change-Id: Ib0cc60af037f12be0a1ab94ab32c743f7fca2b1d
(cherry picked from commit d4b96b45727314585d02394bb5a084393b647729)
Reviewed-on: https://gerrit.libreoffice.org/10734
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>